--- a/test_data/unit_test_generated/show_handles_404.yaml
+++ b/test_data/unit_test_generated/show_handles_404.yaml
@@ -5,7 +5,7 @@ then:
   status: 404
   header:
   - name: date
-    value: Wed, 28 May 2025 00:32:30 GMT
+    value: Thu, 29 May 2025 10:47:40 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -13,5 +13,5 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: LQLwxhX2IAMEYZA=
+    value: LU4z4gpJIAMEa-g=
   body: '{"detail":"Unable to locate attr_path ''search_term''"}'
