fix: include `env-filter` in flox-package-builder
The `env-filter` script was being built and installed as a single-file package,
and this commit updates the build to instead include it as a script in the
libexec subdirectory of the flox-package-builder package.

We did this after observing problems with the `env-filter` script not being
found in CI, and in one instance we also observed it was not marked executable.

--- a/package-builder/Makefile
+++ b/package-builder/Makefile
@@ -1,6 +1,6 @@
 .DEFAULT_GOAL := all
 
-ALL = flox-build.mk build-manifest.nix nef/default.nix \
+ALL = env-filter flox-build.mk build-manifest.nix nef/default.nix \
   $(addprefix nef/lib/,default.nix dirToAttrs.nix extendAttrSet.nix mkOverlay.nix reflect.nix)
 
 OS := $(shell uname -s)
@@ -19,6 +19,10 @@ libsandbox.so: sandbox.c closure.o
 
 libsandbox.dylib: sandbox.c closure.o
 	$(CC) -pthread -dynamiclib $^ -o $@
+
+env-filter: env-filter.bash
+	cp $< $@
+	chmod +x $@
 
 .PHONY: all
 all: $(ALL)
