--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -37,6 +37,7 @@ serde_json.workspace = true
 serde_yaml.workspace = true
 serde.workspace = true
 shell-escape.workspace = true
+slug.workspace = true
 supports-color.workspace = true
 sys-info.workspace = true
 sysinfo.workspace = true
