--- a/test_data/unit_test_generated/go_version_from_content_returns_none_on_incompatible_version_with_catalog.yaml
+++ b/test_data/unit_test_generated/go_version_from_content_returns_none_on_incompatible_version_with_catalog.yaml
@@ -6,13 +6,13 @@ then:
   status: 200
   header:
   - name: date
-    value: Tue, 03 Jun 2025 17:26:49 GMT
+    value: Thu, 05 Jun 2025 18:29:41 GMT
   - name: content-type
     value: application/json
   - name: content-length
-    value: '162'
+    value: '1241'
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: LmR9_hW-oAMESMg=
-  body: '{"items":[{"name":"go","page":null,"messages":[{"level":"error","type":"constraints_too_tight","message":"Resolution constraints are too tight.","context":{}}]}]}'
+    value: LtBDMi2DoAMEShw=
+  body: '{"items":[{"name":"go","page":null,"additionl_pages":null,"messages":[{"level":"error","type":"constraints_too_tight","message":"Resolution constraints are too tight.","context":{}},{"level":"trace","type":"resolution_logic","message":"TRACE (GROUP): Group ''go'' could not be resolved with strategy: Stage 1: Only allow missing builds for packages without current locked derivations.","context":{"install_id":"GROUP","message":"Group ''go'' could not be resolved with strategy: Stage 1: Only allow missing builds for packages without current locked derivations."}},{"level":"trace","type":"resolution_logic","message":"TRACE (GROUP): Group ''go'' could not be resolved with strategy: Stage 2: Unlock existing derivations but require known builds.","context":{"install_id":"GROUP","message":"Group ''go'' could not be resolved with strategy: Stage 2: Unlock existing derivations but require known builds."}},{"level":"trace","type":"resolution_logic","message":"TRACE (GROUP): Group ''go'' could not be resolved with strategy: Stage 3: Unlock existing derivations and allow missing builds.","context":{"install_id":"GROUP","message":"Group ''go'' could not be resolved with strategy: Stage 3: Unlock existing derivations and allow missing builds."}}]}]}'
