--- a/test_data/unit_test_generated/hello_aarch64-darwin.yaml
+++ b/test_data/unit_test_generated/hello_aarch64-darwin.yaml
@@ -6,7 +6,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Thu, 05 Jun 2025 18:30:04 GMT
+    value: Fri, 06 Jun 2025 16:33:00 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -14,5 +14,5 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: LtBG2hkboAMES9g=
+    value: LwC5di45IAMEMSw=
   body: '{"items":[{"name":"toplevel","page":{"page":810143,"url":"","packages":[{"catalog":"nixpkgs","attr_path":"hello","pkg_path":"hello","derivation":"/nix/store/5cwvcayncc3x8cyjwzpansj5zjmnx25j-hello-2.12.2.drv","name":"hello-2.12.2","pname":"hello","version":"2.12.2","system":"aarch64-darwin","outputs":[{"name":"out","store_path":"/nix/store/ap166019kj8xgrbq3x82yp40l192axsc-hello-2.12.2"}],"outputs_to_install":["out"],"description":"Program that produces a familiar, friendly greeting","license":"GPL-3.0-or-later","locked_url":"https://github.com/flox/nixpkgs?rev=c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev":"c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev_count":810143,"rev_date":"2025-06-03T05:50:57Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["unstable"],"scrape_date":"2025-06-05T04:24:20.885183Z","cache_uri":null,"install_id":"hello"}],"messages":[],"complete":true},"additionl_pages":null,"messages":[]}]}'
