--- a/test_data/unit_test_generated/python_no_match.yaml
+++ b/test_data/unit_test_generated/python_no_match.yaml
@@ -6,7 +6,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Thu, 05 Jun 2025 18:29:54 GMT
+    value: Fri, 06 Jun 2025 16:32:52 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -14,7 +14,7 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: LtBFMjeboAMESYg=
+    value: LwC4Jim3IAMEMqA=
   body: '{"items":[{"name":"python3","page":null,"additionl_pages":null,"messages":[{"level":"error","type":"constraints_too_tight","message":"Resolution constraints are too tight.","context":{}},{"level":"trace","type":"resolution_logic","message":"TRACE (GROUP): Group ''python3'' could not be resolved with strategy: Stage 1: Only allow missing builds for packages without current locked derivations.","context":{"install_id":"GROUP","message":"Group ''python3'' could not be resolved with strategy: Stage 1: Only allow missing builds for packages without current locked derivations."}},{"level":"trace","type":"resolution_logic","message":"TRACE (GROUP): Group ''python3'' could not be resolved with strategy: Stage 2: Unlock existing derivations but require known builds.","context":{"install_id":"GROUP","message":"Group ''python3'' could not be resolved with strategy: Stage 2: Unlock existing derivations but require known builds."}},{"level":"trace","type":"resolution_logic","message":"TRACE (GROUP): Group ''python3'' could not be resolved with strategy: Stage 3: Unlock existing derivations and allow missing builds.","context":{"install_id":"GROUP","message":"Group ''python3'' could not be resolved with strategy: Stage 3: Unlock existing derivations and allow missing builds."}}]}]}'
 ---
 when:
@@ -25,7 +25,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Thu, 05 Jun 2025 18:30:03 GMT
+    value: Fri, 06 Jun 2025 16:32:54 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -33,5 +33,5 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: LtBFej5doAMEaKg=
+    value: LwC4Vil1IAMENyw=
   body: '{"items":[{"name":"python3","page":{"page":810143,"url":"","packages":[{"catalog":"nixpkgs","attr_path":"python3","pkg_path":"python3","derivation":"/nix/store/nzwj02s7zyxrzyqvcz3dvxdvwm2chv61-python3-3.12.10.drv","name":"python3-3.12.10","pname":"python3","version":"3.12.10","system":"aarch64-darwin","outputs":[{"name":"out","store_path":"/nix/store/v0vy1c59f0vf71h64caw17hzymvg0zms-python3-3.12.10"}],"outputs_to_install":["out"],"description":"High-level dynamically-typed programming language","license":"Python-2.0","locked_url":"https://github.com/flox/nixpkgs?rev=c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev":"c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev_count":810143,"rev_date":"2025-06-03T05:50:57Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["unstable"],"scrape_date":"2025-06-05T04:24:29.423206Z","cache_uri":null,"install_id":"python3"},{"catalog":"nixpkgs","attr_path":"python3","pkg_path":"python3","derivation":"/nix/store/7k802fimdgwvibasmy6fmcn2ixy6xs0r-python3-3.12.10.drv","name":"python3-3.12.10","pname":"python3","version":"3.12.10","system":"aarch64-linux","outputs":[{"name":"out","store_path":"/nix/store/rpf3admp58i0lwmsbv0y3dg7l7qqj4a9-python3-3.12.10"},{"name":"debug","store_path":"/nix/store/p61ablwahkxdx97pwlz29b04zpncgmvg-python3-3.12.10-debug"}],"outputs_to_install":["out"],"description":"High-level dynamically-typed programming language","license":"Python-2.0","locked_url":"https://github.com/flox/nixpkgs?rev=c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev":"c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev_count":810143,"rev_date":"2025-06-03T05:50:57Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["unstable"],"scrape_date":"2025-06-05T04:43:28.783953Z","cache_uri":null,"install_id":"python3"},{"catalog":"nixpkgs","attr_path":"python3","pkg_path":"python3","derivation":"/nix/store/bry67cscjpz0zhmiprr7iyn3473f26c0-python3-3.12.10.drv","name":"python3-3.12.10","pname":"python3","version":"3.12.10","system":"x86_64-darwin","outputs":[{"name":"out","store_path":"/nix/store/g13l84j8gn1fdhl3pzkg2r9ip9jz1hhd-python3-3.12.10"}],"outputs_to_install":["out"],"description":"High-level dynamically-typed programming language","license":"Python-2.0","locked_url":"https://github.com/flox/nixpkgs?rev=c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev":"c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev_count":810143,"rev_date":"2025-06-03T05:50:57Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["unstable"],"scrape_date":"2025-06-05T05:00:47.435405Z","cache_uri":null,"install_id":"python3"},{"catalog":"nixpkgs","attr_path":"python3","pkg_path":"python3","derivation":"/nix/store/z22g908n9sgcdsly56xyph8qybxcdrm9-python3-3.12.10.drv","name":"python3-3.12.10","pname":"python3","version":"3.12.10","system":"x86_64-linux","outputs":[{"name":"out","store_path":"/nix/store/8w718rm43x7z73xhw9d6vh8s4snrq67h-python3-3.12.10"},{"name":"debug","store_path":"/nix/store/fi03x2bn49bmm3h53snkdmkypilnd5n2-python3-3.12.10-debug"}],"outputs_to_install":["out"],"description":"High-level dynamically-typed programming language","license":"Python-2.0","locked_url":"https://github.com/flox/nixpkgs?rev=c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev":"c2a03962b8e24e669fb37b7df10e7c79531ff1a4","rev_count":810143,"rev_date":"2025-06-03T05:50:57Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["unstable"],"scrape_date":"2025-06-05T05:21:06.238150Z","cache_uri":null,"install_id":"python3"}],"messages":[],"complete":true},"additionl_pages":null,"messages":[]}]}'
