chore: disable hyper optimizations
opt-level > 0 causes hyper to create bad requests because of a rustc
bug, so set opt-level to 0

I also left .connection_verbose(true) in our client builder as it was
helpful during debugging.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -121,3 +121,9 @@ opt-level = "z"
 strip = true
 lto = true
 codegen-units = 1
+
+# Disable compiler optimizations until
+# https://github.com/rust-lang/rust/issues/140686
+# is fixed
+[profile.release.package."hyper"]
+opt-level = 0
