fix: skip extra mock regen: build/hello
This job moves the response file at the end of the job, but the
presence of that response is what's used by default for checking
whether to re-run the job. This change adjusts the job to check
for the presence of the output directory instead.

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -852,6 +852,7 @@ myhello.runtime-packages = [ "hello", "goodbye" ]
 '''
 
 [build.hello]
+skip_if_output_exists = "build/hello"
 files = ["build/hello/hello.c", "build/hello/.flox"]
 pre_cmd = '''
     rm .flox/env/manifest.lock
