--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -579,6 +579,20 @@ post_cmd = '''
     mv "$RESPONSE_FILE" "$env_dir/$(basename $RESPONSE_FILE)"
 '''
 
+[envs.heredocs]
+skip_if_output_exists = "envs/heredocs"
+files = ["envs/heredocs/manifest.toml"]
+pre_cmd = "flox init"
+cmd = "flox edit -f manifest.toml"
+post_cmd = '''
+    envs_output_dir="$(dirname $RESPONSE_FILE)"
+    env_dir="$envs_output_dir/heredocs"
+    mkdir -p "$env_dir"
+    cp manifest.toml "$env_dir/manifest.toml"
+    cp .flox/env/manifest.lock "$env_dir/manifest.lock"
+    mv "$RESPONSE_FILE" "$env_dir/$(basename $RESPONSE_FILE)"
+'''
+
 [envs.krb5_prereqs]
 skip_if_output_exists = "envs/krb5_prereqs"
 files = ["envs/krb5_prereqs/manifest.toml"]
