--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -606,6 +606,21 @@ post_cmd = '''
     mv "$RESPONSE_FILE" "$env_dir/$(basename $RESPONSE_FILE)"
 '''
 
+# Use to test a package in a non-toplevel pkg-group
+[envs.hello_other_pkg_group]
+skip_if_output_exists = "envs/hello_other_pkg_group"
+files = ["envs/hello_other_pkg_group/manifest.toml"]
+pre_cmd = "flox init"
+cmd = "flox edit -f manifest.toml"
+post_cmd = '''
+    envs_output_dir="$(dirname $RESPONSE_FILE)"
+    env_dir="$envs_output_dir/hello_other_pkg_group"
+    mkdir -p "$env_dir"
+    cp manifest.toml "$env_dir/manifest.toml"
+    cp .flox/env/manifest.lock "$env_dir/manifest.lock"
+    mv "$RESPONSE_FILE" "$env_dir/$(basename $RESPONSE_FILE)"
+'''
+
 # Used in install and list tests for packages whose install IDs != pkg-path
 [envs.hello_as_greeting]
 skip_if_output_exists = "envs/hello_as_greeting"
