feat: impl `outdentText` expression
The following rules characterize the behavior of the `outdentText` expression:

1. Count the leading spaces of each line, any lines that are empty
2. Take the minimum.
3. Remove the computed number of spaces from the beginning of each non-empty line.

Note: there may be a more efficient solution
utilizing attrsets as a set and relying on stable sorting
to find the shortest string.
Something like

  indents = filter (indent: indent != null)
  if len(indents) == 0 then 0
  else
  stringLenght (
    elemAt 0 (
      attrNames (
        listToAttrs (
          map (indent: {name = indent; value = null;}) indents
        )
      )
    )
  )

I'm unsure however, if
1. this will be significantly faster
2. would be easier to understand
3. its prudent to rely on this behavior detail of the nix language

squash:  Only count literal _spaces_ as indentation.

Before the regex matching indentation used `:space:`
which turned out to include any kind of whitespace.
However mixed in `\t` makes counting indentation incorrect
or much more complex.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,8 +119,11 @@ jobs:
           AWS_SECRET_ACCESS_KEY:  "${{ secrets.MANAGED_CACHE_PUBLIC_AWS_SECRET_ACCESS_KEY }}"
           SSH_KEY:                "${{ secrets.MANAGED_FLOXBOT_SSH_KEY }}"
 
-      - name: "Test"
+      - name: "Test NEF"
         run: nix develop -L --no-update-lock-file --command just test-nef
+        
+      - name: "Test buildenvLib"
+        run: nix develop -L --no-update-lock-file --command just test-buildenvLib
 
   cli-dev:
     name: "dev"
