--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -58,6 +58,7 @@ serial_test.workspace = true
 tracing-subscriber.workspace = true
 flox-test-utils.workspace = true
 catalog-api-v1 = { workspace = true, features = ["tests"] }
+sentry = { workspace = true, features = ["test"] }
 
 [features]
 # allow exporting test helpers in dev mode only
