chore: add tests for nonexistent file checks
Added a collection of [contrived] tests for exercising the "nonexistent
files in build output" check logic. Note that the string values asserted
in these tests originate from `package-builder/validate-build.bash`.
Required adding a new set of mock data for two packages, one of which
is in the "toplevel" package group and another that was not, and we
didn't have one of those yet.

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -407,6 +407,9 @@ pre_cmd = "flox init"
 cmd = "flox install vim vim-full"
 ignore_cmd_errors = true # packages conflict
 
+[resolve.hello-curl-not-in-toplevel]
+pre_cmd = "flox init"
+cmd = "printf 'version=1\n[install]\n%s\n%s\n%s\n' 'hello.pkg-path = \"hello\"' 'curl.pkg-path = \"curl\"' 'curl.pkg-group = \"not-toplevel\"' | flox edit -f -"
 
 [search.hello]
 cmd = "flox search hello"
