--- a/cli/mk_data/Cargo.toml
+++ b/cli/mk_data/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2024"
 anyhow.workspace = true
 clap.workspace = true
 clap_derive.workspace = true
+duct = "1.0.0"
 fs_extra.workspace = true
 indicatif.workspace = true
 serde.workspace = true
@@ -16,3 +17,4 @@ tempfile.workspace = true
 toml.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+walkdir.workspace = true
