fix: make integration tests pass

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -399,7 +399,7 @@ record_cmd = '''
     flox install zlib
 '''
 
-[custom.pypthon_requirements_zlib]
+[custom.python_requirements_zlib]
 unpack_dir_contents = [ "init/python/common", "init/python/requirements" ]
 pre_cmd = '''
     flox init --auto-setup
@@ -457,3 +457,12 @@ post_cmd = '''
     # Copy over any source files
     cp -r CMakeLists.txt hello.in HelloTarget "$build_dir"
 '''
+
+[custom.heredocs]
+pre_cmd = '''
+    flox init
+'''
+record_cmd = '''
+    flox edit -f "$INPUT_DATA/manifests/heredocs.toml"
+'''
+
