chore: added new test_data env with hello@2.10

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -917,3 +917,16 @@ post_cmd = '''
     # Copy over any source files
     cp hello.c "$build_dir/hello.c"
 '''
+
+[envs.old_hello]
+skip_if_output_exists = "envs/old_hello"
+files = ["envs/old_hello/manifest.toml"]
+pre_cmd = "flox init"
+cmd = "flox edit -f manifest.toml"
+post_cmd = '''
+    envs_output_dir="$(dirname $RESPONSE_FILE)"
+    env_dir="$envs_output_dir/old_hello"
+    mkdir -p "$env_dir"
+    cp .flox/env/manifest.toml "$env_dir/manifest.toml"
+    cp .flox/env/manifest.lock "$env_dir/manifest.lock"
+'''
