chore: added catalog resolve data for cmake and gnumake
Surprising that cmake does not include gnumake as a dependency.

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -55,6 +55,10 @@ pre_cmd = "flox init"
 cmd = "flox install bpftrace systemd"
 ignore_cmd_errors = true
 
+[resolve.cmake-gnumake]
+pre_cmd = "flox init"
+cmd = "flox install cmake gnumake"
+
 [resolve.curl_hello]
 pre_cmd = "flox init"
 cmd = "flox install curl hello"
